// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#pagination <Pagination /> With \`pageNumber\` and \`totalPages\` and \`spread\` renders 1`] = `
<ul
  className="pagination"
>
  <li
    className="zero-page"
  >
    <Link>
      <a
        data-discover="true"
        href="/1"
        onClick={[Function]}
      >
        <span
          className="page-number"
        >
          1
        </span>
      </a>
    </Link>
  </li>
  <li
    className="reverse-page"
  >
    <Link>
      <a
        data-discover="true"
        href="/6"
        onClick={[Function]}
      >
        <span
          className="reverse"
        >
          ‹
        </span>
      </a>
    </Link>
  </li>
  <Fragment>
    <li
      className="page"
    >
      <Link>
        <a
          data-discover="true"
          href="/7"
          onClick={[Function]}
        >
          <span
            className="page-number"
          >
            7
          </span>
        </a>
      </Link>
    </li>
    <li
      className="page"
    >
      <Link>
        <a
          data-discover="true"
          href="/8"
          onClick={[Function]}
        >
          <span
            className="page-number"
          >
            8
          </span>
        </a>
      </Link>
    </li>
    <li
      className="current-page"
    >
      <Link>
        <a
          data-discover="true"
          href="/9"
          onClick={[Function]}
        >
          <span
            className="page-number"
          >
            9
          </span>
        </a>
      </Link>
    </li>
  </Fragment>
</ul>
`;

exports[`#pagination <Pagination /> With \`pageNumber\` and \`totalPages\` renders 1`] = `
<ul
  className="pagination"
>
  <Fragment>
    <li
      className="current-page"
    >
      <Link>
        <a
          data-discover="true"
          href="/1"
          onClick={[Function]}
        >
          <span
            className="page-number"
          >
            1
          </span>
        </a>
      </Link>
    </li>
  </Fragment>
  <li
    className="last-page"
  >
    <Link>
      <a
        data-discover="true"
        href="/2"
        onClick={[Function]}
      >
        <span
          className="page-number"
        >
          2
        </span>
      </a>
    </Link>
  </li>
</ul>
`;

exports[`#pagination <Pagination format='center' /> With \`pageNumber\` and \`totalPages\` and \`spread\` renders 1`] = `
<ul
  className="pagination"
>
  <li
    className="zero-page"
  >
    <Link>
      <a
        data-discover="true"
        href="/1"
        onClick={[Function]}
      >
        <span
          className="page-number"
        >
          1
        </span>
      </a>
    </Link>
  </li>
  <li
    className="reverse-page"
  >
    <Link>
      <a
        data-discover="true"
        href="/6"
        onClick={[Function]}
      >
        <span
          className="reverse"
        >
          ‹
        </span>
      </a>
    </Link>
  </li>
  <Fragment>
    <li
      className="page"
    >
      <Link>
        <a
          data-discover="true"
          href="/7"
          onClick={[Function]}
        >
          <span
            className="page-number"
          >
            7
          </span>
        </a>
      </Link>
    </li>
    <li
      className="page"
    >
      <Link>
        <a
          data-discover="true"
          href="/8"
          onClick={[Function]}
        >
          <span
            className="page-number"
          >
            8
          </span>
        </a>
      </Link>
    </li>
    <li
      className="current-page"
    >
      <Link>
        <a
          data-discover="true"
          href="/9"
          onClick={[Function]}
        >
          <span
            className="page-number"
          >
            9
          </span>
        </a>
      </Link>
    </li>
  </Fragment>
</ul>
`;

exports[`#pagination <Pagination format='center' /> With \`pageNumber\` and \`totalPages\` renders 1`] = `
<ul
  className="pagination"
>
  <li
    className="current-page"
  >
    <Link>
      <a
        data-discover="true"
        href="/1"
        onClick={[Function]}
      >
        <span
          className="page-number"
        >
          1
        </span>
      </a>
    </Link>
  </li>
  <li
    className="page"
  >
    <Link>
      <a
        data-discover="true"
        href="/2"
        onClick={[Function]}
      >
        <span
          className="page-number"
        >
          2
        </span>
      </a>
    </Link>
  </li>
</ul>
`;
